typesafe-builders/tests/ui/reject/field_attr/ctor/missing_arg.stderr
error[E0061]: this function takes 1 argument but 0 arguments were supplied
  --> tests/ui/reject/field_attr/ctor/missing_arg.rs:10:2
   |
10 |     Struct::builder().build();
   |     ^^^^^^^^^^^^^^^-- an argument of type `u8` is missing
   |
note: associated function defined here
  --> tests/ui/reject/field_attr/ctor/missing_arg.rs:3:10
   |
3  | #[derive(Builder)]
   |          ^^^^^^^
...
6  |     x: u8,
   |     -----
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)
help: provide the argument
   |
10 |     Struct::builder(/* u8 */).build();
   |                    ~~~~~~~~~~
